# update-notitifier-systray

./: AUTHORS  ChangeLog  ChangeLog.old  Makefile.am  Makefile.in  README.md  README.testing  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in
data/: Makefile.am  Makefile.in  apt_check.py  dbus-helper  hook-example  hooks.py  reboot-hook  reboot-hook.in  update-motd-updates-available  update-notifier.1  update-notifier.desktop.in  update-notifier.schemas.in  upgrade-app
debian/: changelog  clean  control  copyright  docs  install  links  postinst  postrm  preinst  rules  update-notifier-common.dirs  update-notifier-common.install  update-notifier-common.links  update-notifier-common.postinst  update-notifier-common.postrm  update-notifier-common.preinst  update-notifier.docs  update-notifier.install
pixmaps/: Makefile.am  Makefile.in
pixmaps/16x16/: Makefile.am  Makefile.in
pixmaps/22x22/: Makefile.am  Makefile.in
pixmaps/24x24/: Makefile.am  Makefile.in
pixmaps/48x48/: Makefile.am  Makefile.in
po/: POTFILES.in  af.po  ar.po  ast.po  be.po  bg.po  br.po  ca.po  cs.po  csb.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fo.po  fr.po  gl.po  he.po  hi.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  ku.po  lt.po  lv.po  mn.po  ms.po  nb.po  nds.po  (+21 more)
src/: Makefile.am  Makefile.in  avahi.c  avahi.h  clipboard.c  crash.c  crash.h  firmware.c  firmware.h  gdu.c  gdu.h  hook-remove.c  hooks.c  hooks.h  reboot.c  reboot.h  rfc822.c  rfc822.h  update-notifier.c  update-notifier.h  update.c  update.h
ui/: Makefile.am  Makefile.in  hooks-dialog.ui  reboot-dialog.ui
